gobmkida/c1/find_common_libs
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_common_libs/src/engine/board.c:2523:21: error: subscripted value is not an array, pointer, or vector
v16 = ++liberty_mark[0]; 
        ~~~~~~~~~~~~^~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_common_libs/src/engine/board.c:2562:4: error: use of undeclared identifier 'byte_9AA89F'
|| byte_9AA89F[v25] == v26 && string[239].neighborlist[v25 + 160] == string_number[v7] 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_common_libs/src/engine/board.c:2563:4: error: use of undeclared identifier 'byte_9AA88C'
|| byte_9AA88C[v25] == v26 && string[239].neighborlist[v25 + 141] == string_number[v7] 
   ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_common_libs/src/obj/1/board.o] Error 1
